# automagik-agents

./: .aidigestignore  .env-example  .env.example  .gitignore  20250320180221.md  LICENSE  README.md  agent_models.py  codebase.md  config.py  discord_temp_output.md  main.py  memory.py  notion_agent.py  notion_models.py  notion_schema.py  notion_tools.py  notion_utils.py  pyproject.toml  pytest.ini  requirements.txt  test_agent_name.py  test_message_storage.py  test_notion.py  update_notes.md
.cursor/rules/: automagik-agent-development.mdc  config-rules.mdc  db-rules.mdc  global-rules.mdc  task-rules.mdc
.github/workflows/: publish.yml
docs/examples/: CLAUDE.md  memory_agent.py
docs/pydantic-ai/: agents.md  api-agent.md  api-common_tools.md  api-exceptions.md  api-format_as_xml.md  api-messages.md  api-models-anthropic.md  api-models-base.md  api-models-bedrock.md  api-models-cohere.md  api-models-fallback.md  api-models-function.md  api-models-gemini.md  api-models-groq.md  api-models-mistral.md  api-models-openai.md  api-models-test.md  api-models-vertexai.md  api-providers.md  api-pydantic_graph-exceptions.md  api-pydantic_graph-graph.md  api-pydantic_graph-mermaid.md  api-pydantic_graph-nodes.md  api-pydantic_graph-state.md  api-result.md  api-settings.md  api-tools.md  api-usage.md  cli.md  (+27 more)
examples/: gmail_tools_demo.py
playground/: agent_test.py  chat_sessions.json  run_chat.py  setup_database.py
playground_temp/: agent_test.py  clear_database.py  run_chat.py
scripts/: check_sessions.py  cleanup_memory_read_modes.py  cleanup_sessions.py  direct_description_test.py  extract_tool_descriptions.sh  insert_sofia_memories.py  inspect_agent_tools.py  merge-projects.sh  print_all_tools.py  print_descriptions.py  print_tool_descriptions.py  tool_description_inspector.py  update-projects.sh  verify_agent_message_ids.py  view_memory_tools.py
src/: __main__.py  auth.py  cli.py  config.py  constants.py  main.py  test_assistant_messages.py  version.py
tasks/: 2023-11-17_memory_api_bug_fix.md  20250315_2245_db_migration.md  20250315_2257_repository_refactoring.md  20250315_2257_repository_refactoring_report.md  20250318_023353_fix_assistant_message_storage.md  20250318_023353_fix_assistant_message_storage_report.md  20250318_142126_db_refactoring.md  20250318_1608_session_id_agent_mismatch_fix.md  20250318_1608_session_id_agent_mismatch_fix_report.md  20250318_184326_uuid_adaptation_fix.md  20250318_session_creation_bug_fix.md  20250319222915_fix_simple_agent_implementation.md  20250320144509.md  20250320145856_fix_simple_agent_response_validation_error.md  20250320151107.md  20250320153233_message_storage_fix.md  20250320172059.md  20250320180221.md  20250320221358_fix_pydantic_ai_imports.md  20250320230904_fix_null_agent_id_in_messages.md  20250320231628_investigate_simple_agent_tool_calls.md  20250320234039_fix_tool_call_extraction.md  20250320_161441_fix_simple_agent_dynamic_variables.md  20250320_170314_fix_message_storage_logging.md  20250320_170930_fix_memory_tool_error.md  20250320_224207_fix_user_id_in_system_memories.md  20250320_224936_cleanup_auto_sessions.md  20250321002340_fix_duplicate_message_insertions.md  20250321004538_fix_simple_agent_prompt.md  20250323_140000_refactor_simple_agent.md  20250324_052003_simplify_agent_architecture.md  20250324_064328_refactor_api_routes.md
tests/: README.md  api_tests.py  conftest.py  memory_system_test.py  run_all_tests.py  run_api_tests.py  test_agent_common_utils.py  test_memory_tools.py  test_multimodal_support.py  test_new_message_history.py  test_product_agent.py  test_repository.py  test_simple_agent_dependencies.py  test_simple_agent_tools.py
(+241 files in other folders)
