[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automagik-agents"
dynamic = ["version"]
description = "Automagik agents templates"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = {text = "MIT"}
authors = [
    {name = "Cezar Vasconcelos", email = "cezar@namastex.ai"}
]
keywords = ["ai", "agents", "pydantic", "fastapi", "notion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv>=1.0.1",
    "notion-client>=2.3.0",
    "rich>=13.9.4",
    "logfire>=3.6.1",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic-settings>=2.8.0",
    "typer>=0.9.0",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "discord-py>=2.4.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai-graph>=0.0.0",
    "pydantic-ai>=0.0.36",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "pytest-xdist>=3.6.1",
    "requests>=2.32.3",
    "ruff>=0.10.0",
    "uv>=0.6.8",
    "pydantic-ai-slim[duckduckgo]>=0.0.42",
    "pip>=25.0.1",
    "pydantic[email]>=2.10.6",
    "pytest-asyncio>=0.26.0",
    "google-api-python-client>=2.165.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/namastexlabs/automagik-agents"
Repository = "https://github.com/namastexlabs/automagik-agents"
Issues = "https://github.com/namastexlabs/automagik-agents/issues"

[project.scripts]
automagik-agents = "src.cli:app"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
version = {attr = "src.version.__version__"}

[tool.logfire]
ignore_no_config = true

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "src"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]
